 * Removed CRLF encoding check from Import::FlatSubjects
 * Added error for STDIN to Import::BibTeX (unsupported)
 * Changed bin/import_subjects to use input_file

2006-12-04 cjg

 * Changed _foo to foo in params in searches - looks neater.
 * Added export to latest_tool
 * Added links to global feeds from front page.

2006-12-05 cjg
 * Fixed input_list call in testdata to be input_fh
 * Updated contributors list in AUTHORS and webpage.
 * Fixed bug with validating compound fields.
 * Fixed issue that Endnote and flatsubject import plugins didn't have
    "textfile" loaded. 
 * Moved around some fields in workflows
 * Added optional params to lookup urls (for passing extra info, eg. user
    group)
 * Added LIMIT 40 to journal lookups
 * Added publisher to article type
 * Cleaned up user validation subroutine

2006-12-05 moj
 * Item(s)->Field(s)
 * 'No Tools Available' as FirstTool title

2006-12-05 cjg
 * Improved the way columns shows no items

2006-12-05 moj
 * Added pin delta to reset_password

2006-12-05 cjg
 * Sort rendering for reset_password

2006-12-05 cjg
 * Fixed bug with messages and GDOME. (hopefully also fixed for LibXML, but
    not tested)

======================================================================
05/12/2006 - EPRINTS-3.0-beta-3
======================================================================

2006-12-05 tmb
 * Improved Import screen, added "Test Import" option

2006-12-06 tmb
 * Added placeholders for new eprint types

2006-12-06
 * Added broad strokes of Pubmed XML and Pubmed ID import plugins (needs 
    refining later)

2006-12-06 moj
 * Switched pages->pagerange

2006-12-07 cjg
 * Fixed issue with no columns in items and review

2006-12-07 cjg
 * Added a clear error if an unknown export plugin is called from the search.
 * Fixed bug that a failed login caused it to forget where we were going.
 * Added (!) warning box for "there is a newer version" messages and 
    improved phrasing.
