@@ -5915,3 +5915,8 @@ PACKAGE: 2.2.99.2
  * Added (!) warning box for "there is a newer version" messages and 
     improved phrasing.
 
+2006-12-08 cjg
+ * Fixed a bug that workflow fields ignored required param
+ * Fixed the some confusion that required was "1" in the fields config and
+    "yes" in workflow.
+
